microservices/fastapi/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: fastapi
  ports:
  - port: 8080
    targetPort: 8080
